update ui and add clickable frame

--- a/index.html
+++ b/index.html
@@ -17,55 +17,144 @@
     </div>
     <div class="main_container container-fluid justify-content-center">
         <div class="row main_companion justify-content-center">
-            <div class="col-4 row companion_set justify-content-center">
+            <div class="col-4 row companion_set">
               <div class="companions_header col-12">
                 <h4>People who you may know</h4>
               </div>
-              <div class="companion col-4">
-                <img src="faces/1.jpg" alt="">
+              <div class="row justify-content-center">
+                <div class="companion col-3">
+                  <img src="faces/1.jpg" alt="">
+                </div>
+                <div class="companion col-3">
+                  <img src="faces/2.jpg" alt="">
+                </div>
               </div>
-              <div class="companion col-4">
-                <img src="faces/2.jpg" alt="">
+
+              <div class="row justify-content-start">
+                <div class="companion col-3">
+                  <img src="faces/3.jpg" alt="">
+                </div>
+                <div class="companion col-3">
+                  <img src="faces/4.jpg" alt="">
+                </div>
               </div>
-              <div class="companion col-4">
-                <img src="faces/3.jpg" alt="">
+
+              <div class="row justify-content-center">
+                <div class="companion col-3">
+                  <img src="faces/5.jpg" alt="">
+                </div>
+                <div class="companion col-3">
+                  <img src="faces/6.jpg" alt="">
+                </div>
               </div>
-              <div class="companion col-4">
-                <img src="faces/4.jpg" alt="">
+
+              <div class="row justify-content-start">
+                <div class="companion col-3">
+                  <img src="faces/7.jpg" alt="">
+                </div>
+                <div class="companion col-3">
+                  <img src="faces/8.jpg" alt="">
+                </div>
               </div>
-              <div class="companion col-4">
-                <img src="faces/5.jpg" alt="">
-              </div>
-              <div class="companion col-4">
-                <img src="faces/6.jpg" alt="">
-              </div>
-              <div class="companion col-4">
-                <img src="faces/7.jpg" alt="">
-              </div>
-              <div class="companion col-4">
-                <img src="faces/8.jpg" alt="">
-              </div>
-              <div class="companion col-4">
-                <img src="faces/9.jpg" alt="">
+              <div class="row justify-content-center">
+                <div class="companion col-3">
+                  <img src="faces/9.jpg" alt="">
+                </div>
+                <div class="companion col-3">
+                  <img src="faces/10.jpg" alt="">
+                </div>
               </div>
             </div>
 
-          <div class="block_companion_accurate col-12 col-md-7 row justify-content-center">
-            <div class="companion_accurate col-11 col-lg-9">
+          <div class="block_companion_accurate col-12 col-md-5 row justify-content-center">
+            <div class="companion_accurate id="companion" col-11 col-lg-9">
               <div class="companion_img">
-                <img src="faces/5.jpg" alt="">
+                <img class="prof_img" id="prof_img_1" src="faces/1.jpg" alt="">
+                <img class="prof_img" id="prof_img_2" src="faces/2.jpg" alt="">
+                <img class="prof_img" id="prof_img_3" src="faces/3.jpg" alt="">
+                <img class="prof_img" id="prof_img_4" src="faces/4.jpg" alt="">
+                <img class="prof_img" id="prof_img_5" src="faces/5.jpg" alt="">
+                <img class="prof_img" id="prof_img_6" src="faces/6.jpg" alt="">
+                <img class="prof_img" id="prof_img_7" src="faces/7.jpg" alt="">
+                <img class="prof_img" id="prof_img_8" src="faces/8.jpg" alt="">
+                <img class="prof_img" id="prof_img_9" src="faces/9.jpg" alt="">
+                <img class="prof_img" id="prof_img_10" src="faces/10.jpg" alt="">
               </div>
               <div class="companion_bio">
-                <h4>Laura, 23</h4>
-                <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
-                <p>Hey! My name is Laura and im looking for an adequate colleague for daily jogging or cycling trips!</p>
-                <p></p>
+                <div class="bio" id="bio_1">
+                  <h4>Laura, 23</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Laura and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_2">
+                  <h4>Ram, 29</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Ram and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_3">
+                  <h4>Geena, 48</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Geena and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_4">
+                  <h4>Laso, 21</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Laso and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_5">
+                  <h4>Alice, 16</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Alice and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_6">
+                  <h4>Raul, 23</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Raul and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_7">
+                  <h4>Grena, 46</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Grena and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_8">
+                  <h4>Ugabuga, 52</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Ugabuga and i want bananas!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_9">
+                  <h4>Selebuga, 23</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My name is Selebuga and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
+
+                <div class="bio" id="bio_10">
+                  <h4>Lao, 19</h4>
+                  <h6>Wrocław, śródmieście <br> Want: daily jogging</h6>
+                  <p>Hey! My Lao is Laura and im looking for an adequate colleague for daily jogging or cycling trips!</p>
+                  <p></p>
+                </div>
               </div>
-              <div class="comapnion_nav">
-                <hr>
-                <a class="nav_btn" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24"><path d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"/></svg></a>
-                <a class="nav_btn" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24"><path d="M9 21.035l-9-8.638 2.791-2.87 6.156 5.874 12.21-12.436 2.843 2.817z"/></svg></a>
-                <a class="nav_btn" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg></a>
+              <div class="comapnion_nav noselect">
+                <svg xmlns="http://www.w3.org/2000/svg" onclick="Prev()" class="nav_btn" viewBox="0 0 24 24"><path d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"/></svg>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="nav_btn" style="fill: lightgreen" viewBox="0 0 24 24"><path d="M9 21.035l-9-8.638 2.791-2.87 6.156 5.874 12.21-12.436 2.843 2.817z"/></svg></a>
+                <svg xmlns="http://www.w3.org/2000/svg" onclick="Next()" class="nav_btn" viewBox="0 0 24 24"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
               </div>
             </div>
           </div>
@@ -73,7 +162,7 @@
     </div>
 
     <div class="footer">
-      <h3>Finder.</h3>
+      <h3>Friender.</h3>
       <p>Coś to tam o rodo lub prywatności</p>
     </div>
 
@@ -83,5 +172,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="main.js" type="text/javascript">
+
+    </script>
   </body>
 </html>
